--- a/curs1/ap3.html
+++ b/curs1/ap3.html
@@ -1,16 +1,17 @@
-<header>HEADER</header>
-<nav>NAV</nav>
-
-<articole>
-<header>Header 2</header>
-<section>Section 1</section>
-<section>Section 2</section>
-<footer>Footer</footer>
-</articole>
-
-<div> 
-    <aside>Aside 1</aside>
-    <aside>Aside 2</aside>
-</div>
-
-<footer>Footer 2</footer>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Curs 1 aplicatia 3</title>
+  </head>
+  <body>
+    <p>
+      <b>Lorem ipsum</b>, dolor sit amet consectetur adipisicing elit. Dolore quos, exercitationem eius molestiae quia
+      reprehenderit excepturi eos earum ad architecto itaque adipisci obcaecati repellat aperiam ullam! Dolores ipsam
+      nisi necessitatibus!
+    </p>
+    <p><strong>Lorem ipsum</strong> dolor sit amet consectetur adipisicing elit. Asperiores, voluptatum earum! Porro, assumenda officiis adipisci nostrum iste quasi temporibus fugiat eaque minus accusamus nihil placeat, consectetur eveniet, animi nulla corrupti.</p>
+    <p>Alias, quos, explicabo, itaque saepe molestias asperiores quaerat quas repudiandae sapiente architecto velit vero placeat cumque voluptate fugit id nisi debitis? Mollitia at explicabo neque odio, esse perferendis molestias consequuntur.</p>
+  </body>
+</html>
