--- a/curs2/ap3.html
+++ b/curs2/ap3.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <h1>Exemple de ancore</h1>
-    <ul>
-        <li>
-            <a href="https://www.google.com">Google</a>
-        </li>
-
-        <li>
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
-        </li>
-        <li>
-            <a href="/curs2/ap2.html" target="_blank">Aplicatia2 din curs 2</a>
-        </li>
-        <li>
-            <a href="./ap3.html" target="_blank">Aplicatia3 din curs 2</a>
-        </li>
-        <li>
-            <a href="../curs1/ap2.html" target="_blank">Aplicatia 2 curs 1</a>
-        </li>
-        <li>
-            <a href="./ap4.html#3">Aplicatia 4 zona 3</a>
-        </li>
-        </ul>
-
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<h1>Exemple de ancore</h1>
+		<ul>
+			<li>
+				<a href="https://www.google.com">Google</a>
+			</li>
+			<li>
+				<a href="https://www.facebook.com" target="_blank">Facebook</a>
+			</li>
+			<li>
+				<a href="/curs2/ap1.html" target="_blank">Aplicatia2 din curs 2</a>
+			</li>
+			<li>
+				<a href="./ap3.html" target="_blank">Aplicatia3 din curs 2</a>
+			</li>
+			<li>
+				<a href="../curs1/ap2.html" target="_blank">Aplicatia 2 curs 1</a>
+			</li>
+			<li>
+				<a href="./ap4.html#3">Aplicatia 4 zona 3</a>
+			</li>
+		</ul>
+	</body>
 </html>
