--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Assignment</title>
 </head>
 <body>
-    <h1>Incarcare fisier in GitHub si publicare folosind GitHub Pages</h1>
+    <h1>Incarcare fisier in GitHub si publicare folosind GitHub Page</h1>
 </body>
 </html>
