--- a/proiect/index.html
+++ b/proiect/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Proiect PMS: HTML + CSS</title>
+		<!-- GOOGLE FONTS METODA 1-->
+		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Syne+Tactile&display=swap" rel="stylesheet"> -->
+
 		<link rel="stylesheet" href="./assets/css/style.css" />
 
 		<link rel="icon" type="image/png" href="./assets/images/favicon/favicon-96x96.png" sizes="96x96" />
