--- a/proiect/pages/blog.html
+++ b/proiect/pages/blog.html
@@ -4,8 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Proiect PMS: HTML + CSS</title>
+		<!-- FONT DIN GOOGLE FONTS -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Syne+Tactile&display=swap"
+			rel="stylesheet"
+		/>
+
 		<link rel="stylesheet" href="../assets/css/style.css" />
-        <link rel="stylesheet" href="../assets/css/table.css">
+		<link rel="stylesheet" href="../assets/css/table.css" />
 
 		<link rel="icon" type="image/png" href="../assets/images/favicon/favicon-96x96.png" sizes="96x96" />
 		<link rel="icon" type="image/svg+xml" href="../assets/images/favicon/favicon.svg" />
@@ -34,79 +42,147 @@
 			</nav>
 		</header>
 		<!-- STOP HEADER -->
-        <div id="containerTabel">
-            <h1>Pagina Blog</h1>
-            <table id="tabel1">
-        <thead>
-            <tr>
-                <th>Nr. crt.</th>
-                <th>Nume</th>
-                <th>Prenume</th>
-                <th>Email</th>
-                <th>Telefon</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Ionescu</td>
-                <td>Ion</td>
-                <td>ion@ion.com</td>
-                <td>0723232323</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Popescu</td>
-                <td>Paul</td>
-                <td>paul@demo.com</td>
-                <td>0724242424</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Antonescu</td>
-                <td>Ana</td>
-                <td>ana@ana.ro</td>
-                <td>0734343434</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Vasilescu</td>
-                <td>Vlad</td>
-                <td>vlad@tet.eu</td>
-                <td>0745454545</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Paunescu</td>
-                <td>Petru</td>
-                <td>petru@petru.com</td>
-                <td>0756565656</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>Anghel</td>
-                <td>Andrei</td>
-                <td>andrei@demo.eu</td>
-                <td>0778787878</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>Radulescu</td>
-                <td>Radu</td>
-                <td>radu@test.com</td>
-                <td>0791919191</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="4">Total medie</td>
-                <td>7</td>
-            </tr>
-        </tfoot>
-            </table>
-        </div>
+		<div id="containerTabel">
+			<h1>Pagina Blog</h1>
+			<table id="tabel1">
+				<thead>
+					<tr>
+						<th>Nr. crt.</th>
+						<th>Nume</th>
+						<th>Prenume</th>
+						<th>Email</th>
+						<th>Telefon</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>Ionescu</td>
+						<td>Ion</td>
+						<td>ion@ion.com</td>
+						<td>0723232323</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Popescu</td>
+						<td>Paul</td>
+						<td>paul@demo.com</td>
+						<td>0724242424</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>Antonescu</td>
+						<td>Ana</td>
+						<td>ana@ana.ro</td>
+						<td>0734343434</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>Vasilescu</td>
+						<td>Vlad</td>
+						<td>vlad@tet.eu</td>
+						<td>0745454545</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>Paunescu</td>
+						<td>Petru</td>
+						<td>petru@petru.com</td>
+						<td>0756565656</td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td>Anghel</td>
+						<td>Andrei</td>
+						<td>andrei@demo.eu</td>
+						<td>0778787878</td>
+					</tr>
+					<tr>
+						<td>7</td>
+						<td>Radulescu</td>
+						<td>Radu</td>
+						<td>radu@test.com</td>
+						<td>0791919191</td>
+					</tr>
+				</tbody>
+				<tfoot>
+					<tr>
+						<td colspan="4">Total medie</td>
+						<td>7</td>
+					</tr>
+				</tfoot>
+			</table>
+		</div>
 
-
-
-    </body>
+        <!--START CONTAINER CARDS -->
+		<div id="containerCards">
+			<div class="card">
+                <div class="cardHeader">
+                    <h3 class="cardTitle">PERSONAL</h3>
+                    <div class="price"><strong><sup>$</sup></span>10</strong></strong></div>
+                    <div class="perMonth">
+                        <span style="display: block;">PER</span>
+                        <span style="display: block;">MONTH</span>
+                    </div>
+                </div>
+                <div class="cardBody">
+                    <ul>
+                        <li><strong>Free</strong> Securiy Service</li>
+                        <li><strong>1x</strong> Security Service</li>
+                        <li><strong>Unlimited</strong> Security Service</li>
+                        <li><strong>1x</strong> Dashboard Access</li>
+                        <li class="disabled"><strong>3x</strong> Job Listings</li>
+                    </ul>
+                </div>
+                <div class="cardFooter">
+                    <button>BUY NOW</button>
+                </div>
+			</div>
+            <div class="card">
+                <div class="cardHeader">
+                    <h3 class="cardTitle">BUSINESS</h3>
+                    <div class="price"><strong><sup>$</sup></span>10</strong></strong></div>
+                    <div class="perMonth">
+                        <span style="display: block;">PER</span>
+                        <span style="display: block;">MONTH</span>
+                    </div>
+                </div>
+                <div class="cardBody">
+                    <ul>
+                        <li><strong>Free</strong> Securiy Service</li>
+                        <li><strong>1x</strong> Security Service</li>
+                        <li><strong>Unlimited</strong> Security Service</li>
+                        <li><strong>1x</strong> Dashboard Access</li>
+                        <li class="disabled"><strong>3x</strong> Job Listings</li>
+                    </ul>
+                </div>
+                <div class="cardFooter">
+                    <button>BUY NOW</button>
+                </div>
+			</div>
+            <div class="card">
+                <div class="cardHeader">
+                    <h3 class="cardTitle">ENTERPRISE</h3>
+                    <div class="price"><strong><sup>$</sup></span>10</strong></strong></div>
+                    <div class="perMonth">
+                        <span style="display: block;">PER</span>
+                        <span style="display: block;">MONTH</span>
+                    </div>
+                </div>
+                <div class="cardBody">
+                    <ul>
+                        <li><strong>Free</strong> Securiy Service</li>
+                        <li><strong>1x</strong> Security Service</li>
+                        <li><strong>Unlimited</strong> Security Service</li>
+                        <li><strong>1x</strong> Dashboard Access</li>
+                        <li class="disabled"><strong>3x</strong> Job Listings</li>
+                    </ul>
+                </div>
+                <div class="cardFooter">
+                    <button>BUY NOW</button>
+                </div>
+			</div>
+		</div>
+        <!--END CONTAINER CARDS -->
+	</body>
 </html>
