--- a/proiect/pages/portofoliu.html
+++ b/proiect/pages/portofoliu.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Arrows:wght@400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Syne+Tactile&display=swap" rel="stylesheet">
+
+
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Proiect PMS: HTML + CSS</title>
