--- a/proiect/pages/contact.html
+++ b/proiect/pages/contact.html
@@ -38,5 +38,48 @@
 			</nav>
 		</header>
 		<!-- STOP HEADER -->
+		 <main>
+			<h1>Pagina Contact</h1>
+
+			<form id="contact" action="" method="post">
+			<div>
+				<label for="">Orasul</label>
+				<select name="oras" id="">
+					<option value="1">Bucuresti</option>
+					<option value="2">Cluj</option>
+					<option value="3">Timisoara</option>
+					<option value="4">Husi</option>
+				</select>
+			</div>
+			<div>
+				<label for="">Cursuri</label>
+				<select name="cursuri[]" id="" multiple>
+					<option value="css">CSS</option>
+					<option value="HTML">HTML</option>
+					<option value="JS">JS</option>
+					<option value="VUE">VUE</option>
+					<option value="NODE">NODEJS</option>
+				</select>
+			</div>
+			<div>
+				<label for="">Mesaj</label>
+				<textarea name="mesaj" id=""></textarea>
+			</div>
+			<div>
+				<fieldset>
+					<legend>Program cursuri</legend>
+					<input type="radio" name="program" id="" value="dimineata" />
+					<label for="">dimineata</label>
+					<input type="radio" name="program" id="" value="pranz" checked/>
+					<label for="">pranz</label>
+					<input type="radio" name="program" id="" value="seara" disabled/>
+					<label for="">seara</label>
+				</fieldset>
+			</div>
+			<div>
+				<button type="submit">Trimite datele</button>
+			</div>
+		</form>
+		 </main>
     </body>
 </html>
