--- a/recapitulare/05.html
+++ b/recapitulare/05.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>05</title>
-    <!-- <style media="screen" type="text/css"> -->
-    <style>
-        p:nth-child(2n+1){
-            color: red;
-        }
-        p:nth-child(2n){
-            color: green;
-        }
-        p:first-child{
-            color: aqua;
-        }
-        p:last-child{
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>05</title>
+		<!-- <style media="screen" type="text/css"> -->
+		<style>
+			p:nth-child(2n + 1) {
+				color: red;
+			}
+			p:nth-child(2n) {
+				color: green;
+			}
+			p:first-child {
+				color: aqua;
+			}
+			p:last-child {
+				color: blue;
+			}
+			/* p:last-of-type{
             color: blueviolet;
-        }
-    </style>
-</head>
-<body>
-    <p class="ex5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, labore!</p>
-    <p class="ex5">Assumenda esse expedita quidem aliquid incidunt doloribus culpa ab aspernatur!</p>
-    <p class="ex5">Voluptatem, aliquid qui velit omnis quis et commodi nemo necessitatibus!</p>
-    <p class="ex5">Consequatur aut pariatur iure magni id consectetur facere fugiat dolorum.</p>
-    <p class="ex5">Saepe blanditiis alias veritatis impedit maiores totam dolorum earum tenetur?</p>
-    <p class="ex5">Nesciunt, eos atque itaque nihil sint neque et voluptate velit!</p>
-    <p class="ex5">Aperiam dolor aliquam odio architecto error illo adipisci quaerat itaque!</p>
-    <p class="ex5">Quia corporis provident aliquid at hic non maiores doloremque nesciunt.</p>
-    <p class="ex5">Rerum inventore vero autem quia nemo nulla dolorum unde dignissimos.</p>
-    <p class="ex5">Harum labore nobis maiores libero consequuntur at voluptate molestias mollitia!</p>
-    <p class="ex5">Quas corrupti impedit magni nulla ea assumenda quasi nam nesciunt.</p>
-    <p class="ex5">Ipsum numquam similique reiciendis. Aliquam natus aperiam iusto et. Aspernatur.</p>
-    <p class="ex5">Aut ex, assumenda fugiat temporibus totam cum maiores magnam repellat.</p>
-    <p class="ex5">Et excepturi tempore rem perspiciatis fuga incidunt, suscipit ab. Nulla!</p>
-    <p class="ex5">Animi dolorem, fuga delectus voluptate assumenda quaerat ex consectetur est!</p>
-
-</body>
+        } */
+		</style>
+	</head>
+	<body>
+		<div>
+			<p class="ex5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, labore!</p>
+			<p class="ex5">Assumenda esse expedita quidem aliquid incidunt doloribus culpa ab aspernatur!</p>
+			<p class="ex5">Voluptatem, aliquid qui velit omnis quis et commodi nemo necessitatibus!</p>
+			<p class="ex5">Consequatur aut pariatur iure magni id consectetur facere fugiat dolorum.</p>
+			<p class="ex5">Saepe blanditiis alias veritatis impedit maiores totam dolorum earum tenetur?</p>
+			<p class="ex5">Nesciunt, eos atque itaque nihil sint neque et voluptate velit!</p>
+			<p class="ex5">Aperiam dolor aliquam odio architecto error illo adipisci quaerat itaque!</p>
+			<p class="ex5">Quia corporis provident aliquid at hic non maiores doloremque nesciunt.</p>
+			<p class="ex5">Rerum inventore vero autem quia nemo nulla dolorum unde dignissimos.</p>
+			<p class="ex5">Harum labore nobis maiores libero consequuntur at voluptate molestias mollitia!</p>
+			<p class="ex5">Quas corrupti impedit magni nulla ea assumenda quasi nam nesciunt.</p>
+			<p class="ex5">Ipsum numquam similique reiciendis. Aliquam natus aperiam iusto et. Aspernatur.</p>
+			<p class="ex5">Aut ex, assumenda fugiat temporibus totam cum maiores magnam repellat.</p>
+			<p class="ex5">Et excepturi tempore rem perspiciatis fuga incidunt, suscipit ab. Nulla!</p>
+			<p class="ex5">Animi dolorem, fuga delectus voluptate assumenda quaerat ex consectetur est!</p>
+		</div>
+	</body>
 </html>
